Fix color picker overflowing left panel horizontally
Constrain Quill's color picker dropdown to 112px width with flex-wrap
so swatches display as a compact grid instead of a single horizontal row
that causes the container to scroll.

--- a/frontend/src/app/modal/appreciation-editor-modal.component.css
+++ b/frontend/src/app/modal/appreciation-editor-modal.component.css
@@ -93,6 +93,12 @@
   margin-right: 0;
 }
 
+:host ::ng-deep .ql-toolbar .ql-color-picker .ql-picker-options {
+  width: 112px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 :host ::ng-deep .ql-editor {
   height: 220px !important;
   min-height: 220px !important;
